Bug 333817. Give listbox focus display item correct bounds. r+sr=bzbarsky